* Some naming fixes
* Upgrade dependencies