@@ -1,4 +1,7 @@
-org.gradle.jvmargs=-Xmx4096m
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableR8=true
+kotlin.code.style=official
+kotlin.incremental=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=true
